# iot-sensor-anomaly-mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  1  Dockerfile  Makefile  README.md  cloudbuild.yaml  create_deployment.py  deployment.yaml  docker-compose.yml  gcp_build.txt  iot-deployment.yaml  prefect.yaml  prefect_deploy.py  pyproject.toml  requirements.txt  set_wsl.sh  setup.md  setup.sh  tunnel.sh
.github/workflows/: deploy.yml  terraform.yml
docker/mlflow/: Dockerfile
docker/prefect-agent/: Dockerfile
docker/prefect_flow/: Dockerfile
infra/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
iot_models/baseline/: ensemble.pkl  iso.pkl  sl_meta.pkl  sl_model.pkl
iot_models/optimized/: X_cols.pkl  autoencoder.keras  ensemble.pkl  scaler.pkl  sl_meta.pkl  sl_model.pkl
ipynb/: iot_anomaly.ipynb
pipeline/: iot_pipeline.py  prefect_mlflow.py
src/: iot_anomaly.py  predict.py  test.py
src/iot_anomaly/: agent_service.py  core.py  monitoring.py  pipeline.py  predict.py  test.py  test_predictions.py
tests/: integration_test.py  test.sh
